<resources>
    <string name="app_name">Ujian</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="list_user">List User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="usia">Usia</string>
    <string name="phone">Phone</string>
    <string name="alamat">Alamat</string>
</resources>
